# expense-tracker-backend

./: alembic.ini  main.py  pyproject.toml
app/: main.py
app/api/v1/endpoints/: users.py
app/auth/: forms.py  security.py
app/core/: config.py  databases.py  dependencies.py
app/crud/: UserCrud.py
app/models/: UserModel.py  __init__.py
app/schemas/: TokenSchema.py  UserSchema.py
migrations/: env.py
migrations/versions/: af4e794953bc_initial_migration.py
